Minor spacing fixes

--- a/less/components/consonant/_variables.less
+++ b/less/components/consonant/_variables.less
@@ -56,7 +56,7 @@
 @consonant-card-btn-min-width: 100px;
 @consonant-card-video-ico-size: 42px;
 @consonant-card-logo-img-max-widht: 90px;
-@consonant-card-logo-img-max-height: 32px;
+@consonant-card-logo-img-max-height: 24px;
 
 /* AspectRatio1to1Card */
 @consonant-card-l-1-img-height: 320px;
