--- a/less/components/consonant/cards/3-2.less
+++ b/less/components/consonant/cards/3-2.less
@@ -74,7 +74,7 @@
         display: block;
         bottom: 16px;
         left: 0;
-        padding: 8px 24px;
+        padding: 7px 24px;
         border-width: 1px;
         border-style: solid;
         border-color: transparent;
