--- a/less/components/consonant/cards/full.less
+++ b/less/components/consonant/cards/full.less
@@ -105,7 +105,7 @@
         display: block;
         bottom: 124px;
         left: 0;
-        padding: 8px 24px;
+        padding: 7px 24px;
         border-width: 1px;
         border-style: solid;
         border-color: transparent;
